# homeinfer

./: README.md
cpp/: CMakeLists.txt
cpp/server/grpc/: inference_server.cc
cpp/server/grpc/proto/: inference.proto
